--- a/Assets/Plugins/package.json
+++ b/Assets/Plugins/package.json
@@ -2,7 +2,7 @@
     "name": "com.squaredino.hypercasualcore",
     "displayName": "HyperCasual Core",
     "version": "1.0.0",
-    "unity": "2019.4.18f1",
+    "unity": "2019.4",
     "description": "SquareDino HyperCasual Core"
 	"dependencies": {
     "com.unity.postprocessing": "3.0.1"
