--- a/Assets/Plugins/package.json
+++ b/Assets/Plugins/package.json
@@ -4,4 +4,7 @@
     "version": "1.0.0",
     "unity": "2019.4",
     "description": "SquareDino HyperCasual Core"
+	"dependencies": {
+    "com.unity.postprocessing": "3.0.1"
+  }
 }
