--- a/Assets/Plugins/package.json
+++ b/Assets/Plugins/package.json
@@ -3,5 +3,8 @@
     "displayName": "HyperCasual Core",
     "version": "1.0.1",
     "unity": "2019.4",
-    "description": "SquareDino HyperCasual Core"
+    "description": "SquareDino HyperCasual Core",
+	"dependencies": {
+    "com.unity.postprocessing": "1.0.0"
+  }
 }
